src/App.css
@font-face {
  font-family: "Digital";
  src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot");
  src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.woff") format("woff"), url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.svg#Digital-7") format("svg");
}

body {
  height: 95vh;
  width: 95vw;
  background-color:#696969;
}
main { height: 100%; }
.container {
  height: 100%;
  display: grid;
  grid-template-columns: 30% repeat(4, 10%) 30%;
  grid-template-rows: 12.5% 5% 20% repeat(5, 10%) 12.5%;
}

/* Grid Classes - Columns */
.col-1 { grid-column: 2 / 3; }
.col-2 { grid-column: 3 / 4; }
.col-3 { grid-column: 4 / 5; }
.col-4 { grid-column: 5 / 6; }
.col-1-2 { grid-column: 2 / 4; }
.col-1-4 { grid-column: 2 / 6; }
/* Grid Classes - Rows */
.row-1 { grid-row: 2 / 3; }
.row-2 { grid-row: 3 / 4; }
.row-3 { grid-row: 4 / 5; }
.row-4 { grid-row: 5 / 6; }
.row-5 { grid-row: 6 / 7; }
.row-6 { grid-row: 7 / 8; }
.row-7 { grid-row: 8 / 9; }
.row-1-2 { grid-row: 2 / 4; }

/* Calculator Display */
#calc-display {
  width: 100%;
  height: 100%;
  background-color: black;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
  font-family: digital;
}
#dis, #eq { padding-right: 10%; }
#dis {
  font-size: 4vw;
  margin-top: 20px;
}
#eq { font-size: 1.5vw; }

/* Calculator Buttons */
button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
  text-align: center;
  text-decoration: none;
  border: 1px solid black;
  cursor: grab;
  font-size: 2.5em;
}
button:hover {
  opacity: 0.7;
  border: 1.5px solid white;
}
button:focus { outline: 0; }
.num { background-color: #A9A9A9; }
.oper { background-color: orange; }

/* Responsive for Small Screens */
@media only screen and (max-width: 767px) {
  .container{
    grid-template-columns: 6% repeat(4, 22%) 6%;
    grid-template-rows: 5% 5% 20% repeat(5, 13%) 5%;
  }
  #dis { font-size: 12vw; }
  #eq { font-size: 4vw; }
}

